tests/e2e/mutation_whitespace2.story
diff_url = "foobar"
a = (http fetch url:diff_url) split by: "\n"
